# my-new-repo

./: README.md  s2config.json
s2-codeservice-template/: .env.example  bigbrain.manifest.yaml  pyproject.toml
s2-codeservice-template/s2_codeservice_template/: __init__.py  database.py  singleton.py
s2-codeservice-template/tests/: __init__.py
