[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core"]

[project]
  dependencies = ["fastapi (>=0.115.8,<0.116.0)","python-dotenv (>=1.0.1,<2.0.0)", "pydantic (>=2.10.6,<3.0.0)", "uvicorn (>=0.34.0,<0.35.0)", "psutil (>=7.0.0,<8.0.0)", "singlestoredb @ git+https://github.com/dgalas2/singlestoredb-python.git@users/dgalas2/local-development-apps"]
  description = ""
  name = "s2-codeservice-template"
  requires-python = ">=3.9" 
  version = "1.0.0"
  [project.scripts]
    my-app = "s2_codeservice_template:main"

[tool.poetry.dependencies]
